--- a/src/WebAPPs/SPA/Blazor.WASM/Pages/Services/Service/Industry4_0.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Pages/Services/Service/Industry4_0.razor
@@ -1,12 +1,12 @@
 ﻿@page "/services/industry-4_0"
 
-@inject ILanguageContainerService LanguageContainerService
+@inject IStringLocalizer<Industry4_0> StringLocalizer
 
-<TextOverImage Alt="@LanguageContainerService.Keys["Services_Industry4_0_ImageAlt_Title"]"
+<TextOverImage Alt="@StringLocalizer["Services_Industry4_0_ImageAlt_Title"]"
                Src="https://via.placeholder.com/1000x300"
                TextPosition="TextOverImageType.Centered">
     <Text>
-        <MatH1>@LanguageContainerService.Keys["Services_Industry4_0_Title"]</MatH1>
+        <MatH1>@StringLocalizer["Services_Industry4_0_Title"]</MatH1>
     </Text>
 </TextOverImage>
 
@@ -15,7 +15,7 @@
 <div class="mat-layout-grid">
     <div class="mat-layout-grid-inner">
         <div class="mat-layout-grid-cell">
-            <p>@LanguageContainerService.Keys["Services_Industry4_0_Title"]</p>
+            <p>@StringLocalizer["Services_Industry4_0_Title"]</p>
         </div>
     </div>
 
@@ -23,13 +23,13 @@
 
     <div class="mat-layout-grid-inner">
         <div class="mat-layout-grid-cell">
-            <MatH3>@LanguageContainerService.Keys["Services_Industry4_0_InWhatSectorsCanYouCountOnUs_Title"]</MatH3>
+            <MatH3>@StringLocalizer["Services_Industry4_0_InWhatSectorsCanYouCountOnUs_Title"]</MatH3>
             <p>
-                @LanguageContainerService.Keys["Services_Industry4_0_InWhatSectorsCanYouCountOnUs_Text"]
+                @StringLocalizer["Services_Industry4_0_InWhatSectorsCanYouCountOnUs_Text"]
             </p>
         </div>
         <div class="mat-layout-grid-cell">
-            <img src="https://via.placeholder.com/500x300" alt="@LanguageContainerService.Keys["Services_Industry4_0_ImageAlt_InWhatSectorsCanYouCountOnUs"]" />
+            <img src="https://via.placeholder.com/500x300" alt="@StringLocalizer["Services_Industry4_0_ImageAlt_InWhatSectorsCanYouCountOnUs"]" />
         </div>
     </div>
 
@@ -39,24 +39,24 @@
 
     <div class="mat-layout-grid-inner">
         <div class="mat-layout-grid-cell">
-            <img src="https://via.placeholder.com/500x300" alt="@LanguageContainerService.Keys["Services_Industry4_0_ImageAlt_HowWePlanTheNewProject"]" />
+            <img src="https://via.placeholder.com/500x300" alt="@StringLocalizer["Services_Industry4_0_ImageAlt_HowWePlanTheNewProject"]" />
         </div>
         <div class="mat-layout-grid-cell">
-            <MatH3>@LanguageContainerService.Keys["Services_Industry4_0_HowWePlanTheNewProject_Title"]</MatH3>
+            <MatH3>@StringLocalizer["Services_Industry4_0_HowWePlanTheNewProject_Title"]</MatH3>
             <p>
-                @LanguageContainerService.Keys["Services_Industry4_0_HowWePlanTheNewProject_Text"]
+                @StringLocalizer["Services_Industry4_0_HowWePlanTheNewProject_Text"]
             </p>
         </div>
     </div>
 
     <div class="mat-layout-grid-inner">
         <div class="mat-layout-grid-cell">
-            <img src="https://via.placeholder.com/500x300" alt="@LanguageContainerService.Keys["Services_Industry4_0_ImageAlt_WhatTechStackWeUseForIndustries"]" />
+            <img src="https://via.placeholder.com/500x300" alt="@StringLocalizer["Services_Industry4_0_ImageAlt_WhatTechStackWeUseForIndustries"]" />
         </div>
         <div class="mat-layout-grid-cell">
-            <MatH3>@LanguageContainerService.Keys["Services_Industry4_0_WhatTechStackWeUseForIndustries_Title"]</MatH3>
+            <MatH3>@StringLocalizer["Services_Industry4_0_WhatTechStackWeUseForIndustries_Title"]</MatH3>
             <p>
-                @LanguageContainerService.Keys["Services_Industry4_0_WhatTechStackWeUseForIndustries_Text"]
+                @StringLocalizer["Services_Industry4_0_WhatTechStackWeUseForIndustries_Text"]
             </p>
         </div>
     </div>
