--- a/src/WebAPPs/SPA/Blazor.WASM/Pages/Services/Service/UniqueSoftwareDev.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Pages/Services/Service/UniqueSoftwareDev.razor
@@ -1,13 +1,13 @@
 ﻿@page "/services/unique-dev"
 
-@inject ILanguageContainerService LanguageContainerService
+@inject IStringLocalizer<UniqueSoftwareDev> StringLocalizer
 
 
-<TextOverImage Alt="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_ImageAlt_Title"]"
+<TextOverImage Alt="@StringLocalizer["Services_UniqueSoftwareDev_ImageAlt_Title"]"
                Src="https://via.placeholder.com/1000x300"
                TextPosition="TextOverImageType.Centered">
     <Text>
-        <MatH1>@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Title"]</MatH1>
+        <MatH1>@StringLocalizer["Services_UniqueSoftwareDev_Title"]</MatH1>
     </Text>
 </TextOverImage>
 
@@ -18,23 +18,23 @@
 <div class="mat-layout-grid">
     <div class="mat-layout-grid-inner">
         <div class="mat-layout-grid-cell">
-            <MatH3>@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Unique_Requirements_Title"]</MatH3>
+            <MatH3>@StringLocalizer["Services_UniqueSoftwareDev_Unique_Requirements_Title"]</MatH3>
             <p>
-                @LanguageContainerService.Keys["Services_UniqueSoftwareDev_Unique_Requirements_Text"]
+                @StringLocalizer["Services_UniqueSoftwareDev_Unique_Requirements_Text"]
             </p>
         </div>
         <div class="mat-layout-grid-cell">
-            <img src="https://via.placeholder.com/500x300" alt="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_ImageAlt_Unique_Requirements"]" />
+            <img src="https://via.placeholder.com/500x300" alt="@StringLocalizer["Services_UniqueSoftwareDev_ImageAlt_Unique_Requirements"]" />
         </div>
     </div>
     <div class="mat-layout-grid-inner">
         <div class="mat-layout-grid-cell">
-            <img src="https://via.placeholder.com/500x300" alt="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_ImageAlt_Unique_Requirements_Advantages"]" />
+            <img src="https://via.placeholder.com/500x300" alt="@StringLocalizer["Services_UniqueSoftwareDev_ImageAlt_Unique_Requirements_Advantages"]" />
         </div>
         <div class="mat-layout-grid-cell">
-            <MatH3>@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Unique_Requirements_Advantages_Title"]</MatH3>
+            <MatH3>@StringLocalizer["Services_UniqueSoftwareDev_Unique_Requirements_Advantages_Title"]</MatH3>
             <p>
-                @LanguageContainerService.Keys["Services_UniqueSoftwareDev_Unique_Requirements_Advantages_Text"]
+                @StringLocalizer["Services_UniqueSoftwareDev_Unique_Requirements_Advantages_Text"]
             </p>
         </div>
     </div>
@@ -43,9 +43,9 @@
 
     <div class="mat-layout-grid-inner">
         <div class="mat-layout-grid-cell">
-            <MatH3>@LanguageContainerService.Keys["Services_UniqueSoftwareDev_HowWeDoBusiness_Title"]</MatH3>
+            <MatH3>@StringLocalizer["Services_UniqueSoftwareDev_HowWeDoBusiness_Title"]</MatH3>
             <p>
-                @LanguageContainerService.Keys["Services_UniqueSoftwareDev_HowWeDoBusiness_Text"]
+                @StringLocalizer["Services_UniqueSoftwareDev_HowWeDoBusiness_Text"]
             </p>
         </div>
     </div>
@@ -77,39 +77,39 @@
 <MatDivider Class="m-5" />
 
 <div class="m-auto">
-    <ToggleableQuestionComponent Question="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_1"]">
+    <ToggleableQuestionComponent Question="@StringLocalizer["Services_UniqueSoftwareDev_Questions_1"]">
         <Answer>
-            @LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_1_Answer"]
+            @StringLocalizer["Services_UniqueSoftwareDev_Questions_1_Answer"]
         </Answer>
     </ToggleableQuestionComponent>
 
-    <ToggleableQuestionComponent Question="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_2"]">
+    <ToggleableQuestionComponent Question="@StringLocalizer["Services_UniqueSoftwareDev_Questions_2"]">
         <Answer>
-            @LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_2_Answer"]
+            @StringLocalizer["Services_UniqueSoftwareDev_Questions_2_Answer"]
         </Answer>
     </ToggleableQuestionComponent>
 
-    <ToggleableQuestionComponent Question="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_3"]">
+    <ToggleableQuestionComponent Question="@StringLocalizer["Services_UniqueSoftwareDev_Questions_3"]">
         <Answer>
-            @LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_3_Answer"]
+            @StringLocalizer["Services_UniqueSoftwareDev_Questions_3_Answer"]
         </Answer>
     </ToggleableQuestionComponent>
 
-    <ToggleableQuestionComponent Question="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_4"]">
+    <ToggleableQuestionComponent Question="@StringLocalizer["Services_UniqueSoftwareDev_Questions_4"]">
         <Answer>
-            @LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_4_Answer"]
+            @StringLocalizer["Services_UniqueSoftwareDev_Questions_4_Answer"]
         </Answer>
     </ToggleableQuestionComponent>
 
-    <ToggleableQuestionComponent Question="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_5"]">
+    <ToggleableQuestionComponent Question="@StringLocalizer["Services_UniqueSoftwareDev_Questions_5"]">
         <Answer>
-            @LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_5_Answer"]
+            @StringLocalizer["Services_UniqueSoftwareDev_Questions_5_Answer"]
         </Answer>
     </ToggleableQuestionComponent>
 
-    <ToggleableQuestionComponent Question="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_6"]">
+    <ToggleableQuestionComponent Question="@StringLocalizer["Services_UniqueSoftwareDev_Questions_6"]">
         <Answer>
-            @LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_6_Answer"]
+            @StringLocalizer["Services_UniqueSoftwareDev_Questions_6_Answer"]
         </Answer>
     </ToggleableQuestionComponent>
 </div>
