--- a/src/WebAPPs/SPA/Blazor.WASM/_Imports.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.AspNetCore.WebUtilities
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.Extensions.Localization 
 @using Microsoft.JSInterop
 @using BlazorPro.Spinkit
 @using MatBlazor
@@ -15,7 +16,6 @@
 @using Fluxor.Blazor
 @using Fluxor.Blazor.Web
 @using Fluxor.Blazor.Web.Components
-@using AKSoftware.Localization.MultiLanguages
 @using HomeAPP.WebAPPs.SPA.Blazor.WASM
 @using HomeAPP.WebAPPs.SPA.Blazor.WASM.Utilities.ServerValidation
 @using HomeAPP.WebAPPs.SPA.Blazor.WASM.Pages
