--- a/src/WebAPPs/SPA/Blazor.WASM/App.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/App.razor
@@ -1,4 +1,5 @@
 @inject IStorageRepository StorageRepository
+@inject IRefresherService Refresher
 
 @using System.Globalization; 
 
@@ -24,6 +25,8 @@
 
     protected override async Task OnInitializedAsync()
     {
+        Refresher.RefreshRequested += () => StateHasChanged();
+
         var cultureInfo = await StorageRepository.GetItem<string>("lang");
 
         var culture = CultureInfo.GetCultureInfo(cultureInfo);
