Force reload after new language select added

--- a/src/WebAPPs/SPA/Blazor.WASM/Pages/Settings/Settings.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Pages/Settings/Settings.razor
@@ -32,8 +32,6 @@
         
         await StorageRepo.SetItem("lang", cultureInfo);
 
-        //NavManager.NavigateTo("/", true);
-
-        StateHasChanged();
+        NavManager.NavigateTo("/settings", true);
     }
 }
