--- a/src/WebAPPs/SPA/Blazor.WASM/Shared/Footer/Footer.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Shared/Footer/Footer.razor
@@ -81,7 +81,7 @@
             <div class="mat-layout-grid-cell">
                 <div class="mat-layout-grid">
                     <div class="mat-layout-grid-inner mb-5">
-                        <div class="mat-layout-grid-cell">@StringLocalizer["Usefull links"]</div>
+                        <div class="mat-layout-grid-cell">@StringLocalizer["Useful links"]</div>
                     </div>
                     <div class="mat-layout-grid-inner">
                         <div class="mat-layout-grid-cell">
