Layout grid misplacing grid-inners instead of cells fixed

--- a/src/WebAPPs/SPA/Blazor.WASM/Pages/Contact/Contact.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Pages/Contact/Contact.razor
@@ -6,17 +6,17 @@
 @*bal olda*@
 <div class="mat-layout-grid">
     <div class="mat-layout-grid-inner">
-        <div class="mat-layout-grid-inner"><MatH1>@StringLocalizer["Please contact us right now!"]</MatH1></div>
+        <div class="mat-layout-grid-cell"><MatH1>@StringLocalizer["Please contact us right now!"]</MatH1></div>
     </div>
 
     <div class="mat-layout-grid-inner">
-        <div class="mat-layout-grid-inner">
+        <div class="mat-layout-grid-cell">
             <p>@StringLocalizer["Would you work with us?  It would be a pleasure for us! Please send your message and we will reply within 24 hours"]</p>
         </div>
     </div>
 
     <div class="mat-layout-grid-inner">
-        <div class="mat-layout-grid-inner">
+        <div class="mat-layout-grid-cell">
             <p>@StringLocalizer["You can send your tender here as well. It will speed up the process of getting your new project ready."]</p>
         </div>
     </div>
@@ -28,7 +28,7 @@
 <div class="mat-layout-grid">
 
     <div class="mat-layout-grid-inner">
-        <div class="mat-layout-grid-inner"><MatH2>@StringLocalizer["Contact"]</MatH2></div>
+        <div class="mat-layout-grid-cell"><MatH2>@StringLocalizer["Contact"]</MatH2></div>
     </div>
 
     <div class="mat-layout-grid-inner mb-4">
